fix: author avatar on blog with covers layout [#2962]

--- a/assets/scss/components/elements/blog/_blogpost-meta.scss
+++ b/assets/scss/components/elements/blog/_blogpost-meta.scss
@@ -23,6 +23,7 @@
 	border-radius: 50%;
 	transform: translateY(30%);
 	margin-right: 3px;
+	display: inline-block;
   }
 
 }
